--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-crossfade-image": "^1.1.1",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "2.0.0-next.66cc7a90"
+    "react-scripts": "2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -24,11 +24,11 @@
   },
   "devDependencies": {
     "breakpoint-sass": "^2.7.1",
-    "flow-bin": "^0.71.0",
+    "flow-bin": "^0.89.0",
     "node-sass": "^4.9.0",
     "prettier": "^1.12.1",
     "pretty-quick": "^1.4.1",
-    "susy": "^2.2.14"
+    "susy": "2"
   },
   "browserslist": {
     "development": [
